# Autonomous-Theoretical-Physics-Research-Engine

./: .gitignore  README.md  colab_full_run.ipynb  colab_run.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  usage.md
examples/: scan.yaml
examples/campaigns/: default.yaml  scan_job.slurm
examples/theories/: einstein_hilbert.yaml  f_r.yaml
notebooks/: quickstart.ipynb
src/physics_ai/: __init__.py  artifacts.py  background.py  cli.py  config.py  distributed.py  explore.py  hpc.py  novelty.py  novelty_index.py  orchestrate.py  paper.py  perturbation.py  physics_rules.py  proposal.py  qnm.py  storage.py  symbolic.py  theory.py  types.py  utils.py
src/physics_ai/templates/: paper_md.tpl  paper_tex.tpl
tests/integration/: test_autonomous_campaign.py
tests/unit/: test_background_perturbation.py  test_novelty_and_paper.py  test_qnm_and_constraints.py  test_symbolic.py  test_theory.py
